--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,11 @@
 *.parquet filter=lfs diff=lfs merge=lfs -text
 datalake/bruto/Fake.csv/52561dba-bce7-4d5e-a74f-7583affe8906/part.1 filter=lfs diff=lfs merge=lfs -text
 datalake/bruto/True.csv/b2d2565c-4bfb-4351-8275-f9f061f704b2/part.1 filter=lfs diff=lfs merge=lfs -text
+datalake/modelo/final_model.pkl/bd657e6d-68ac-4f73-8ea3-cb281ef04c10/part.1 filter=lfs diff=lfs merge=lfs -text
+datalake/modelo/final_model.pkl/bd657e6d-68ac-4f73-8ea3-cb281ef04c10/part.10 filter=lfs diff=lfs merge=lfs -text
+datalake/modelo/final_model.pkl/bd657e6d-68ac-4f73-8ea3-cb281ef04c10/part.11 filter=lfs diff=lfs merge=lfs -text
+datalake/modelo/final_model.pkl/bd657e6d-68ac-4f73-8ea3-cb281ef04c10/part.12 filter=lfs diff=lfs merge=lfs -text
+datalake/modelo/final_model.pkl/bd657e6d-68ac-4f73-8ea3-cb281ef04c10/part.13 filter=lfs diff=lfs merge=lfs -text
+datalake/modelo/final_model.pkl/bd657e6d-68ac-4f73-8ea3-cb281ef04c10/part.14 filter=lfs diff=lfs merge=lfs -text
+datalake/modelo/final_model.pkl/bd657e6d-68ac-4f73-8ea3-cb281ef04c10/part.15 filter=lfs diff=lfs merge=lfs -text
+datalake/modelo/final_model.pkl/bd657e6d-68ac-4f73-8ea3-cb281ef04c10/* filter=lfs diff=lfs merge=lfs -text
